--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "tinder for devs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "dev":"nodemon src/app.js",
+    "start": "src/app.js"
+    },
   "keywords": [
     "nodejs"
   ],
